tests/base/valid/Import_Valid_5.whiley
import * from whiley.lang.*
import toString from whiley.lang.Any
import toString from whiley.lang.Any

public void ::main(System.Console sys):
    sys.out.println(toString(1223374))
