tests/base/invalid/Return_CompileFail_10.whiley
import * from whiley.lang.*

void f():
    return true
